<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/superlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/wrapscroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/customer_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_register_title" />

            <EditText
                android:id="@+id/et_customer_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_customer_register_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:hint="@string/nic_number"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_customer_register_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/customer_register_etcontact_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/customer_register_etemail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/customer_register_etuser_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_location_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/street_address"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_location_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_location_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/province"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_customer_register_location_postalcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_rounded"
                android:ems="10"
                android:hint="@string/postalcode"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/btlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <Button
                    android:id="@+id/bt_customer_register_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btsave" />

                <Button
                    android:id="@+id/bt_customer_register_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btclear" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>